# packtab

./: .gitignore  .pre-commit-config.yaml  README.md  prototype_ucd_all.py  pyproject.toml  requirements-dev.txt  setup.cfg  unicode_benchmark.py
.github/workflows/: ci.yml
Lib/packTab/: __init__.py  __main__.py  ucdxml.py
packTab/: __init__.py  __main__.py  test.py  ucdxml.py
tests/: test_packtab.py
