[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "packtab"
version = "1.1.0"
description = "Unicode (and other integer) table packer"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache Software License 2.0"}
authors = [
    {name = "Behdad Esfahbod", email = "behdad@behdad.org"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: Apache Software License",
]
keywords = ["unicode", "table", "compression", "code-generation"]

[project.urls]
Homepage = "https://github.com/harfbuzz/packtab"
Repository = "https://github.com/harfbuzz/packtab"
Issues = "https://github.com/harfbuzz/packtab/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]
ucdxml = [
    "lxml>=4.0.0",
]

[tool.setuptools.packages.find]
include = ["packTab*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = "packTab.ucdxml"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["packTab"]
python_files = ["test.py"]
addopts = [
    "--strict-markers",
    "--strict-config",
]

[tool.coverage.run]
source = ["packTab"]
omit = [
    "*/test.py",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
