[metadata]
name = packtab
version = attr: packTab.__version__
url = "https://github.com/harfbuzz/packtab"
description = "Unicode (and other integer) table packer"
author = "Behdad Esfahbod"
author_email = "behdad@behdad.org"
long_description = file: README.md
long_description_content_type = text/markdown
license = "Apache Software License 2.0"
license_file = LICENSE
platform = any
# keywords = blah, blah
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
python_requires = >=3.5
package_dir =
  =Lib
packages = find:
# install_requires =

[options.packages.find]
where = Lib
